# trabalho_semantica_formal

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: l1interpreter.dune-package  l1interpreter.install  l1interpreter.opam
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmi  dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: l1interpreter.cma  l1interpreter.cmxa  l1interpreter.cmxs
_build/default/lib/.l1interpreter.objs/byte/: l1interpreter.cmi  l1interpreter.cmo  l1interpreter.cmt
_build/default/lib/.l1interpreter.objs/native/: l1interpreter.cmx
_build/default/lib/.merlin-conf/: lib-l1interpreter
_build/default/test/.merlin-conf/: exe-test_l1interpreter
_build/default/test/.test_l1interpreter.eobjs/byte/: dune__exe__Test_l1interpreter.cmi  dune__exe__Test_l1interpreter.cmti
_build/default/test/.test_l1interpreter.eobjs/native/: dune__exe__Test_l1interpreter.cmx
_build/install/default/lib/l1interpreter/: META  dune-package  opam
lib/: dune
test/: dune
